--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -1,4 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-
+    <group android:checkableBehavior="single">
+        <item
+            android:id="@+id/home"
+            android:icon="@mipmap/ic_home_black_24dp"
+            android:title="@string/app_home"/>
+        <item
+            android:id="@+id/setting"
+            android:icon="@mipmap/ic_settings_black_24dp"
+            android:title="@string/app_setting"/>
+    </group>
 </menu>
