--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <!--add-->
-    <color name="colorNavText">#ffffff</color>
+    <color name="colorNavText">#FF4081</color>
     <color name="logo">#433AEE</color>
     <!--End add-->
 </resources>
